# RiftboundDeckAnalyzer

./: .gitignore  README.md  pyproject.toml
src/riftbounddeckanalyzer/analyzers/: analyzer_result.py  deck_analyzer.py
src/riftbounddeckanalyzer/data/analyzer/: fiora.json  leblanc.json
src/riftbounddeckanalyzer/decks/: deck.py
src/riftbounddeckanalyzer/readers/: deck_reader.py
src/riftbounddeckanalyzer/readers/utils/: util.py
src/riftbounddeckexaminer/data/analyzer/: fiora-grand-duelist.json  leblanc-deceiver.json  lillia-bashful-bloom.json
src/riftbounddeckexaminer/examiners/: examiner_manager.py
src/riftbounddeckexaminer/examiners/analyzers/: analyzer_result.py  averages_analyzer.py  deck_analyzer.py  placement_analyzer.py
src/riftbounddeckexaminer/examiners/readers/: deck_reader.py  riftdecks_deck_reader.py  terminal_deck_reader.py
src/riftbounddeckexaminer/riftbound/: card.py  deck.py
src/riftbounddeckexaminer/utils/: util.py
